core/include/eshi/eshi.h

/* ===========================================================================
 * Kantei (判定) — hardware capability grades.
 *
 * The grade selects a render backend. Ink is below Filament's hardware floor
 * and remains reachable on CPU-only targets. Paper uses the lightweight GL
 * backend. Brush uses direct Metal by default and Filament when that optional
 * integration is built. Gold remains reserved for specialized hardware.
 * ==========================================================================*/
typedef enum EshiGrade {
    ESHI_GRADE_INK   = 1, /**< Pure CPU / software raster. ESP32, Playdate, server. */
    ESHI_GRADE_PAPER = 2, /**< GLES 2.0 / WebGL1 class hardware. */
    ESHI_GRADE_BRUSH = 3, /**< Metal / Vulkan / DX12 class hardware. */
    ESHI_GRADE_GOLD  = 4  /**< Ray tracing cores, neural accelerators. */
} EshiGrade;
typedef enum EshiResult {
    ESHI_OK              =  0,
    ESHI_ERR_INVALID     = -1, /**< Bad argument or dead entity. */
    ESHI_ERR_UNSUPPORTED = -2, /**< Grade or feature not built in this binary. */
    ESHI_ERR_NOMEM       = -3,
    ESHI_ERR_LIMIT       = -4, /**< A fixed capacity was exhausted. */
    ESHI_ERR_STALE       = -5, /**< A scene older than the world's epoch; ignored. */
    ESHI_ERR_VERSION     = -6  /**< ABI or packed-protocol versions are incompatible. */
} EshiResult;
/* ===========================================================================
 * Entities
 *
 * 32-bit storage: 17-bit index + 8-bit generation. The generation makes a stale
 * handle detectable rather than silently aliasing a recycled slot. Width and
 * bit layout match Filament's utils::Entity in the vendored release so the
 * render bridge can adopt it as the shared id without a translation table.
 * ==========================================================================*/
typedef uint32_t EshiEntity;
/* ===========================================================================
 * World lifecycle
 *
 * A successful create owns exactly one world and must be paired with destroy;
 * destroying NULL is safe. A world and every borrowed pointer obtained from it
 * are thread-affine: call them only from the thread that created the world.
 * Independent worlds may be used concurrently on independent threads. The
 * diagnostic and grade-probe functions above do not require a world.
 * ==========================================================================*/
typedef struct EshiWorld EshiWorld;
/* ===========================================================================
 * Structure-of-arrays views
 *
 * Views are borrowed pointers into dense component storage, valid until the
 * next call that adds or removes a component of that type. Parallel arrays;
 * index i of every array in a view refers to the same entity.
 * ==========================================================================*/
typedef struct EshiTransformView {
    const EshiEntity* entity;
    float*            x;
    float*            y;
    int32_t           count;
} EshiTransformView;
typedef struct EshiVelocityView {
    const EshiEntity* entity;
    float*            vx;
    float*            vy;
    int32_t           count;
} EshiVelocityView;
/* ===========================================================================
 * Systems — pure functions over component arrays.
 *
 * Systems run in ascending `order`, and ties break on registration sequence.
 * The ordering is stable across runs, which is one of the three things the
 * deterministic video export depends on (the others being the fixed timestep
 * and the seeded RNG).
 * ==========================================================================*/
typedef void (*EshiSystemFn)(EshiWorld* w, float dt, void* user);
/* ===========================================================================
 * Input — abstract keys only.
 *
 * The core has no idea SDL exists. Hosts translate their native scancodes to
 * these and push them in before eshi_tick(). This is what lets one game source
 * run unmodified under both the SDL host and the Flutter embedder.
 * ==========================================================================*/
typedef enum EshiKey {
    ESHI_KEY_UP = 0,
    ESHI_KEY_DOWN,
    ESHI_KEY_LEFT,
    ESHI_KEY_RIGHT,
    ESHI_KEY_W,
    ESHI_KEY_A,
    ESHI_KEY_S,
    ESHI_KEY_D,
    ESHI_KEY_SPACE,
    ESHI_KEY_ESCAPE,
    ESHI_KEY_COUNT
} EshiKey;
/* ===========================================================================
 * Event buffer — the same trick in reverse
 *
 * Same framing as commands, so one codec serves both directions.
 * ==========================================================================*/
typedef enum EshiEventType {
    ESHI_EVENT_COLLISION = 1 /**< u32 a, u32 b; f32 nx, ny, penetration. */
} EshiEventType;
/* ===========================================================================
 * Material — the fullscreen shader and its uniform block.
 *
 * This is the fix for the defect that made feature/pong-engine unmaintainable:
 * there, adding a game changed renderFrame() on every backend and put a
 * game-specific struct into the shared math header. Here the uniform block is
 * opaque to the engine. The game declares its own layout, the engine only
 * forwards the pointer, and no backend signature mentions any game.
 *
 * On Ink the block is passed straight to the shader function. On Filament it
 * becomes a material parameter buffer upload; the game-facing contract does
 * not change.
 * ==========================================================================*/

/**
 * Fragment entry point.
 *
 * @param out_rgba   Four floats, unclamped linear RGBA, written by the shader.
 * @param frag_x     Pixel centre, origin bottom-left, matching Shadertoy.
 * @param frag_y
 * @param res_x      Framebuffer resolution.
 * @param res_y
 * @param time       Seconds. Derived from the frame index in headless renders.
 * @param uniforms   The game's block, or NULL if none was set.
 */
typedef void (*EshiShaderFn)(float* out_rgba,
                             float frag_x, float frag_y,
                             float res_x, float res_y,
                             float time,
                             const void* uniforms);
/**
 * A material, described once for every tier.
 *
 * Ink executes `cpu_shader` directly — it is compiled into the binary. The GPU
 * tiers cannot call a host function pointer. Lightweight GPU backends take
 * `source_path` and transpile it at runtime; packaged renderers take a material
 * package produced by the offline toolchain. Supplying all representations is
 * what lets one material run on every grade; omitting one restricts it to the
 * remaining tiers.
 *
 * Source-backed tiers get shader hot-reload by rebinding after a file change.
 * Package-backed tiers rebind a rebuilt package; Ink remains compiled into the
 * host binary. The representation changes, but the material API does not.
 */
typedef struct EshiMaterial {
    EshiShaderFn cpu_shader;   /**< Ink. NULL restricts the material to GPU tiers. */
    const char*  source_path;  /**< Runtime-transpiled source, or NULL. */
    const char*  package_path; /**< Offline-compiled material package, or NULL. */
    void*        uniform_data; /**< Caller-owned block, or NULL. */
    size_t       uniform_size; /**< Bytes of `uniform_data`. */
} EshiMaterial;
/**
 * Supplies OpenGL entry points for the Paper backend.
 *
 * The core links no windowing library, so it cannot resolve GL symbols itself.
 * The host — which already owns the context — passes its loader (SDL_GL_GetProcAddress
 * or equivalent) and guarantees a current context on every eshi_render() call.
 * This is the boundary rule from ARCHITECTURE.md §5 applied to OpenGL.
 */
typedef void* (*EshiGlProcLoader)(const char* name);
/* ===========================================================================
 * Frame
 *
 * Pull-driven. The core never owns a loop: under SDL the host drives, and
 * under Flutter the embedder's vsync callback drives. Calling eshi_tick from
 * a host callback must remain valid, so nothing here blocks or sleeps.
 * ==========================================================================*/

/**
 * Advances the simulation.
 *
 * `dt` is accumulated and consumed in fixed steps of config.fixed_dt, so the
 * number of system executions depends only on elapsed simulated time and never
 * on frame rate. Pass exactly fixed_dt from a headless renderer to make the
 * output byte-reproducible.
 */
void eshi_tick(EshiWorld* w, float dt);
/**
 * Renders one frame into a host-provided buffer.
 *
 * @param pixels  RGBA8, at least height*stride bytes.
 * @param stride  Bytes per row.
 * @param time    Seconds handed to the shader.
 */
EshiResult eshi_render(EshiWorld* w, uint8_t* pixels, int32_t stride, float time);