bindings/dart/larimar/lib/src/generated/larimar_bindings_generated.dart


/// ===========================================================================
/// Entities
///
/// 32-bit storage: 17-bit index + 8-bit generation. The generation makes a stale
/// handle detectable rather than silently aliasing a recycled slot. Width and
/// bit layout match Filament's utils::Entity in the vendored release so the
/// render bridge can adopt it as the shared id without a translation table.
/// ==========================================================================
typedef EshiEntity = ffi.Uint32;
typedef DartEshiEntity = int;

/// ===========================================================================
/// Event buffer — the same trick in reverse
///
/// Same framing as commands, so one codec serves both directions.
/// ==========================================================================
enum EshiEventType {
  /// < u32 a, u32 b; f32 nx, ny, penetration.
  ESHI_EVENT_COLLISION(1);

  final int value;
  const EshiEventType(this.value);

  static EshiEventType fromValue(int value) => switch (value) {
    1 => ESHI_EVENT_COLLISION,
    _ => throw ArgumentError('Unknown value for EshiEventType: $value'),
  };
}

/// Supplies OpenGL entry points for the Paper backend.
///
/// The core links no windowing library, so it cannot resolve GL symbols itself.
/// The host — which already owns the context — passes its loader (SDL_GL_GetProcAddress
/// or equivalent) and guarantees a current context on every eshi_render() call.
/// This is the boundary rule from ARCHITECTURE.md §5 applied to OpenGL.
typedef EshiGlProcLoader =
    ffi.Pointer<ffi.NativeFunction<EshiGlProcLoaderFunction>>;
typedef EshiGlProcLoaderFunction =
    ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Char> name);

/// ===========================================================================
/// Kantei (判定) — hardware capability grades.
///
/// The grade selects a render backend. Ink is below Filament's hardware floor
/// and remains reachable on CPU-only targets. Paper uses the lightweight GL
/// backend. Brush uses direct Metal by default and Filament when that optional
/// integration is built. Gold remains reserved for specialized hardware.
/// ==========================================================================
enum EshiGrade {
  /// < Pure CPU / software raster. ESP32, Playdate, server.
  ESHI_GRADE_INK(1),

  /// < GLES 2.0 / WebGL1 class hardware.
  ESHI_GRADE_PAPER(2),

  /// < Metal / Vulkan / DX12 class hardware.
  ESHI_GRADE_BRUSH(3),

  /// < Ray tracing cores, neural accelerators.
  ESHI_GRADE_GOLD(4);

  final int value;
  const EshiGrade(this.value);

  static EshiGrade fromValue(int value) => switch (value) {
    1 => ESHI_GRADE_INK,
    2 => ESHI_GRADE_PAPER,
    3 => ESHI_GRADE_BRUSH,
    4 => ESHI_GRADE_GOLD,
    _ => throw ArgumentError('Unknown value for EshiGrade: $value'),
  };
}

/// ===========================================================================
/// Input — abstract keys only.
///
/// The core has no idea SDL exists. Hosts translate their native scancodes to
/// these and push them in before eshi_tick(). This is what lets one game source
/// run unmodified under both the SDL host and the Flutter embedder.
/// ==========================================================================
enum EshiKey {
  ESHI_KEY_UP(0),
  ESHI_KEY_DOWN(1),
  ESHI_KEY_LEFT(2),
  ESHI_KEY_RIGHT(3),
  ESHI_KEY_W(4),
  ESHI_KEY_A(5),
  ESHI_KEY_S(6),
  ESHI_KEY_D(7),
  ESHI_KEY_SPACE(8),
  ESHI_KEY_ESCAPE(9),
  ESHI_KEY_COUNT(10);

  final int value;
  const EshiKey(this.value);

  static EshiKey fromValue(int value) => switch (value) {
    0 => ESHI_KEY_UP,
    1 => ESHI_KEY_DOWN,
    2 => ESHI_KEY_LEFT,
    3 => ESHI_KEY_RIGHT,
    4 => ESHI_KEY_W,
    5 => ESHI_KEY_A,
    6 => ESHI_KEY_S,
    7 => ESHI_KEY_D,
    8 => ESHI_KEY_SPACE,
    9 => ESHI_KEY_ESCAPE,
    10 => ESHI_KEY_COUNT,
    _ => throw ArgumentError('Unknown value for EshiKey: $value'),
  };
}

/// A material, described once for every tier.
///
/// Ink executes `cpu_shader` directly — it is compiled into the binary. The GPU
/// tiers cannot call a host function pointer. Lightweight GPU backends take
/// `source_path` and transpile it at runtime; packaged renderers take a material
/// package produced by the offline toolchain. Supplying all representations is
/// what lets one material run on every grade; omitting one restricts it to the
/// remaining tiers.
///
/// Source-backed tiers get shader hot-reload by rebinding after a file change.
/// Package-backed tiers rebind a rebuilt package; Ink remains compiled into the
/// host binary. The representation changes, but the material API does not.
final class EshiMaterial extends ffi.Struct {
  /// < Ink. NULL restricts the material to GPU tiers.
  external EshiShaderFn cpu_shader;

  /// < Runtime-transpiled source, or NULL.
  external ffi.Pointer<ffi.Char> source_path;

  /// < Offline-compiled material package, or NULL.
  external ffi.Pointer<ffi.Char> package_path;

  /// < Caller-owned block, or NULL.
  external ffi.Pointer<ffi.Void> uniform_data;

  /// < Bytes of `uniform_data`.
  @ffi.Size()
  external int uniform_size;

  static ffi.Pointer<EshiMaterial> $allocate(
    ffi.Allocator $allocator, {
    required EshiShaderFn cpu_shader,
    required ffi.Pointer<ffi.Char> source_path,
    required ffi.Pointer<ffi.Char> package_path,
    required ffi.Pointer<ffi.Void> uniform_data,
    required int uniform_size,
  }) => $allocator<EshiMaterial>()
    ..ref.cpu_shader = cpu_shader
    ..ref.source_path = source_path
    ..ref.package_path = package_path
    ..ref.uniform_data = uniform_data
    ..ref.uniform_size = uniform_size;
}

enum EshiResult {
  ESHI_OK(0),

  /// < Bad argument or dead entity.
  ESHI_ERR_INVALID(-1),

  /// < Grade or feature not built in this binary.
  ESHI_ERR_UNSUPPORTED(-2),
  ESHI_ERR_NOMEM(-3),

  /// < A fixed capacity was exhausted.
  ESHI_ERR_LIMIT(-4),

  /// < A scene older than the world's epoch; ignored.
  ESHI_ERR_STALE(-5),

  /// < ABI or packed-protocol versions are incompatible.
  ESHI_ERR_VERSION(-6);

  final int value;
  const EshiResult(this.value);

  static EshiResult fromValue(int value) => switch (value) {
    0 => ESHI_OK,
    -1 => ESHI_ERR_INVALID,
    -2 => ESHI_ERR_UNSUPPORTED,
    -3 => ESHI_ERR_NOMEM,
    -4 => ESHI_ERR_LIMIT,
    -5 => ESHI_ERR_STALE,
    -6 => ESHI_ERR_VERSION,
    _ => throw ArgumentError('Unknown value for EshiResult: $value'),
  };
}

/// Fragment entry point.
///
/// @param out_rgba   Four floats, unclamped linear RGBA, written by the shader.
/// @param frag_x     Pixel centre, origin bottom-left, matching Shadertoy.
/// @param frag_y
/// @param res_x      Framebuffer resolution.
/// @param res_y
/// @param time       Seconds. Derived from the frame index in headless renders.
/// @param uniforms   The game's block, or NULL if none was set.
typedef EshiShaderFn = ffi.Pointer<ffi.NativeFunction<EshiShaderFnFunction>>;
typedef EshiShaderFnFunction =
    ffi.Void Function(
      ffi.Pointer<ffi.Float> out_rgba,
      ffi.Float frag_x,
      ffi.Float frag_y,
      ffi.Float res_x,
      ffi.Float res_y,
      ffi.Float time,
      ffi.Pointer<ffi.Void> uniforms,
    );
typedef DartEshiShaderFnFunction =
    void Function(
      ffi.Pointer<ffi.Float> out_rgba,
      double frag_x,
      double frag_y,
      double res_x,
      double res_y,
      double time,
      ffi.Pointer<ffi.Void> uniforms,
    );

/// ===========================================================================
/// Systems — pure functions over component arrays.
///
/// Systems run in ascending `order`, and ties break on registration sequence.
/// The ordering is stable across runs, which is one of the three things the
/// deterministic video export depends on (the others being the fixed timestep
/// and the seeded RNG).
/// ==========================================================================
typedef EshiSystemFn = ffi.Pointer<ffi.NativeFunction<EshiSystemFnFunction>>;
typedef EshiSystemFnFunction =
    ffi.Void Function(
      ffi.Pointer<EshiWorld> w,
      ffi.Float dt,
      ffi.Pointer<ffi.Void> user,
    );
typedef DartEshiSystemFnFunction =
    void Function(
      ffi.Pointer<EshiWorld> w,
      double dt,
      ffi.Pointer<ffi.Void> user,
    );

/// ===========================================================================
/// Structure-of-arrays views
///
/// Views are borrowed pointers into dense component storage, valid until the
/// next call that adds or removes a component of that type. Parallel arrays;
/// index i of every array in a view refers to the same entity.
/// ==========================================================================
final class EshiTransformView extends ffi.Struct {
  external ffi.Pointer<EshiEntity> entity;

  external ffi.Pointer<ffi.Float> x;

  external ffi.Pointer<ffi.Float> y;

  @ffi.Int32()
  external int count;

  static ffi.Pointer<EshiTransformView> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<EshiEntity> entity,
    required ffi.Pointer<ffi.Float> x,
    required ffi.Pointer<ffi.Float> y,
    required int count,
  }) => $allocator<EshiTransformView>()
    ..ref.entity = entity
    ..ref.x = x
    ..ref.y = y
    ..ref.count = count;
}

final class EshiVelocityView extends ffi.Struct {
  external ffi.Pointer<EshiEntity> entity;

  external ffi.Pointer<ffi.Float> vx;

  external ffi.Pointer<ffi.Float> vy;

  @ffi.Int32()
  external int count;

  static ffi.Pointer<EshiVelocityView> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<EshiEntity> entity,
    required ffi.Pointer<ffi.Float> vx,
    required ffi.Pointer<ffi.Float> vy,
    required int count,
  }) => $allocator<EshiVelocityView>()
    ..ref.entity = entity
    ..ref.vx = vx
    ..ref.vy = vy
    ..ref.count = count;
}

final class EshiWorld extends ffi.Opaque {}
